--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
         "bootstrap": "^5.3.7",
         "chart.js": "^4.5.0",
         "lodash": "^4.17.21",
+        "lucide-vue-next": "^0.542.0",
+        "qrcode": "^1.5.4",
         "swiper": "^11.2.10",
         "vue-chartjs": "^5.3.2",
         "vue-gtag-next": "^1.14.0",
